# telbot-telegram

./: README.md
native_lib/: CMakeLists.txt
package/: create.sh
package/mtproto/: pubspec.yaml
package/mtproto/example/: mtproto_example.dart
package/mtproto/lib/: mtproto.dart
package/mtproto/test/: mtproto_test.dart
package/telegram_client/: analysis_options.yaml
package/telegram_client/example/: example.dart
package/telegram_client/examples/: tdlib.dart
package/telegram_client/lib/: telegram_client.dart
package/telegram_client_android/: ffigen.yaml
package/telegram_client_android/android/: build.gradle  settings.gradle
package/telegram_client_android/lib/: telegram_client_android.dart
package/telegram_client_apis/example/: telegram_client_apis_example.dart
package/telegram_client_apis/lib/: telegram_client_apis.dart
package/telegram_client_apis/test/: telegram_client_apis_test.dart
package/telegram_client_assets_flutter/lib/: telegram_client_assets_flutter.dart
package/telegram_client_assets_flutter/test/: telegram_client_assets_flutter_test.dart
package/telegram_client_cli/: CHANGELOG.md
package/telegram_client_cli/example/: telegram_client_cli_example.dart
package/telegram_client_cli/lib/: telegram_client_cli.dart
package/telegram_client_cli/test/: telegram_client_cli_test.dart
package/telegram_client_dart/example/: telegram_client_dart_example.dart
package/telegram_client_dart/lib/: telegram_client_dart.dart
package/telegram_client_ios/example/: README.md  pubspec.yaml
package/telegram_client_ios/src/: CMakeLists.txt  telegram_client_ios.c
package/telegram_client_windows/windows/: CMakeLists.txt
(+60 files in other folders)
